--- a/index.html
+++ b/index.html
@@ -34,13 +34,17 @@
       font-weight: bold;
       color: #FF5722;
     }
+    
+    .italic {
+      font-style: italic;
+    }
   </style>
 </head>
 <body>
   <h1>How to Turn Any Car into a Race Car</h1>
   
   <div class="section">
-    <h2>Weight Reduction</h2>
+    <h2><a href="#weight-reduction">Weight Reduction</a></h2>
     <p>Reducing the weight of your car is crucial for better performance on the racetrack. Here are some ways to achieve weight reduction:</p>
     <ul>
       <li>Remove unnecessary interior components like rear seats, carpets, and sound deadening materials.</li>
@@ -51,7 +55,7 @@
   </div>
   
   <div class="section">
-    <h2>Power Modifications</h2>
+    <h2><a href="#power-modifications">Power Modifications</a></h2>
     <p>Increasing the power of your car can significantly improve its racing performance. Here are some power modification options:</p>
     <ul>
       <li>Install a performance intake and exhaust system for improved airflow.</li>
@@ -61,7 +65,7 @@
   </div>
   
   <div class="section">
-    <h2>Safety</h2>
+    <h2><a href="#safety">Safety</a></h2>
     <p>Safety should always be a top priority when turning a car into a race car. Here are some safety measures to consider:</p>
     <ul>
       <li>Install a roll cage to provide structural rigidity and protect the occupants in case of a rollover.</li>
@@ -72,7 +76,7 @@
   </div>
   
   <div class="section">
-    <h2>Upgraded Brakes</h2>
+    <h2><a href="#upgraded-brakes">Upgraded Brakes</a></h2>
     <p>Enhancing the braking capabilities of your car is crucial for better control and stopping power. Here's what you can do:</p>
     <ul>
       <li>Upgrade the brake pads and rotors to high-performance options.</li>
@@ -82,7 +86,7 @@
   </div>
   
   <div class="section">
-    <h2>Aerodynamic Modifications for Downforce</h2>
+    <h2><a href="#aerodynamic-modifications">Aerodynamic Modifications for Downforce</a></h2>
     <p>Aerodynamics play a vital role in race car performance, especially in generating downforce. Consider the following aerodynamic modifications:</p>
     <ul>
       <li>Add a front splitter to direct airflow and reduce lift.</li>
@@ -91,5 +95,78 @@
       <li>Ensure the body panels are properly aligned and sealed to minimize drag.</li>
     </ul>
   </div>
-</body>
-</html>
+  
+  <!-- Weight Reduction Page -->
+  <div class="section">
+    <h2 id="weight-reduction">Weight Reduction</h2>
+    <p>Reducing the weight of your car is crucial for better performance on the racetrack. Here are some ways to achieve weight reduction:</p>
+    <ul>
+      <li>Remove unnecessary interior components like rear seats, carpets, and sound deadening materials.</li>
+      <li>Replace heavy stock parts with lightweight alternatives, such as carbon fiber body panels.</li>
+      <li>Use lightweight racing seats and harnesses instead of heavy stock seats.</li>
+      <li>Consider using lighter wheels and tires.</li>
+    </ul>
+  </div>
+  
+  <!-- Power Modifications Page -->
+  <div class="section">
+    <h2 id="power-modifications">Power Modifications</h2>
+    <p>Increasing the power of your car can significantly improve its racing performance. Here are some power modification options:</p>
+    <ul>
+      <li>Install a performance intake and exhaust system for improved airflow.</li>
+      <li>Upgrade the engine with high-performance components like camshafts, pistons, and headers.</li>
+      <li>Consider adding forced induction systems like turbochargers or superchargers.</li>
+    </ul>
+  </div>
+  
+  <!-- Safety Page -->
+  <div class="section">
+    <h2 id="safety">Safety</h2>
+    <p>Safety should always be a top priority when turning a car into a race car. Here are some safety measures to consider:</p>
+    <ul>
+      <li>Install a roll cage to provide structural rigidity and protect the occupants in case of a rollover.</li>
+      <li>Invest in a fire suppression system.</li>
+      <li>Upgrade the stock seatbelts to racing harnesses for better restraint during high-speed maneuvers.</li>
+      <li>Consider adding a racing seat with appropriate side bolstering for improved support.</li>
+    </ul>
+  </div>
+  
+  <!-- Upgraded Brakes Page -->
+  <div class="section">
+    <h2 id="upgraded-brakes">Upgraded Brakes</h2>
+    <p>Enhancing the braking capabilities of your car is crucial for better control and stopping power. Here's what you can do:</p>
+    <ul>
+      <li>Upgrade the brake pads and rotors to high-performance options.</li>
+      <li>Consider installing a big brake kit for improved heat dissipation and braking performance.</li>
+      <li>Upgrade the brake lines to stainless steel for better pedal feel and durability.</li>
+    </ul>
+  </div>
+  
+  <!-- Aerodynamic Modifications Page -->
+  <div class="section">
+    <h2 id="aerodynamic-modifications">Aerodynamic Modifications for Downforce</h2>
+    <p>Aerodynamics play a vital role in race car performance, especially in generating downforce. Consider the following aerodynamic modifications:</p>
+    <ul>
+      <li>Add a front splitter to direct airflow and reduce lift.</li>
+      <li>Install a rear wing or spoiler to generate downforce and improve stability.</li>
+      <li>Consider adding diffusers to manage airflow underneath the car.</li>
+      <li>Ensure the body panels are properly aligned and sealed to minimize drag.</li>
+    </ul>
+  </div>
+  
+  <!-- Embedded Image -->
+  <div class="section">
+    <h2>Embedded Image</h2>
+    <p>Here's an example of an embedded image:</p>
+    <a href="https://www.example.com/image-source.jpg">
+      <img src="robrx7.jpg" alt="Race Car" />
+    </a>
+  </div>
+  
+  <!-- Embedded YouTube Video -->
+  <div class="section">
+    <h2>Embedded YouTube Video</h2>
+    <p>Here's an example of an embedded YouTube video:</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+  </div>
+  
