--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <h2>Embedded Image</h2>
     <p>Here's an example of an embedded image:</p>
     <a href="https://www.example.com/image-source.jpg">
-      <img src="robrx7.jpg" alt="Race Car" />
+      <img src="robrx7.jpeg" alt="Race Car" />
     </a>
   </div>
   
