--- a/index.html
+++ b/index.html
@@ -167,6 +167,6 @@
   <div class="section">
     <h2>Embedded YouTube Video</h2>
     <p>Here's an example of an embedded YouTube video:</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/watch?v=INwqyPct8qY" frameborder="0" allowfullscreen></iframe>
   </div>
   
