--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
   
   <!-- Embedded Image -->
   <div class="section">
-    <h2>Embedded Image</h2>
-    <p>Here's an example of an embedded image:</p>
+    <h2>this is what happens when someone who has a drem to build a race car, builds a race car</h2>
     <a href="https://www.example.com/image-source.jpg">
       <img src="robrx7.jpeg" alt="Race Car" />
     </a>
@@ -165,8 +164,8 @@
   
   <!-- Embedded YouTube Video -->
   <div class="section">
-    <h2>Embedded YouTube Video</h2>
-    <p>Here's an example of an embedded YouTube video:</p>
+    <h2>this is an example of what happens when there are no rules or safety regulations in rally racing</h2>
+
     <iframe width="560" height="315" src="https://www.youtube.com/embed/INwqyPct8qY" frameborder="0" allowfullscreen></iframe>
   </div>
   
